<resources>
    <string name="app_name">My ApplicationSIP</string>

    <string name="mobileno">Mobile Number(10digits)</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account_sign_up_now">Don\'t have an account?Sign up now</string>
    <string name="welcome">welcome</string>
    <string name="name_min_3_characters">Name(Min. 3 characters)</string>
    <string name="email_address">Email Address</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="password_min_4_characters">Password(Min. 4 characters)</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="msg">Enter your registered mobie number and email below:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="Track">Track Your Calories</string>
    <string name="uname">A step towards a Healthy LIFE</string>
    <string name="logoname">HEALTHY ME</string>
    <string name="cal1">Calories Consumed</string>
    <string name="cal2">Daily Calorie Goal</string>
    <string name="pro">Protein</string>
    <string name="carbs">Carbs</string>
    <string name="fat">Fat</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="snack">Snack</string>
    <string name="add">ADD</string>
    <string name="approx">Calories Recommended</string>


    <string name="fcm_message">FCM Message</string>
    <string name="quickstart_message">Click the SUBSCRIBE TO WEATHER button below to subscribe to the
        weather topic. Messages sent to the weather topic will be received. The LOG TOKEN button logs the
        InstanceID token to logcat.</string>
    <string name="subscribe_to_weather">Subscribe To Weather</string>
    <string name="log_token">Log Token</string>

    <string name="msg_subscribed">Subscribed to weather topic</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <!--
        This is the name that users will see when interacting with this channel.
        It should describe the category of notifications that will be sent through this channel
     -->
    <!-- [START fcm_default_icon_string] -->
    <string name="default_notification_channel_name" translatable="true">Weather</string>
    <!-- [END fcm_default_icon_string] -->
    <string name="msg_subscribe_failed">Failed to subscribe to weather topic</string>


    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_recipe">recipe</string>
    <string name="title_Progress">Progress</string>
    <string name="plans">plans</string>
    <string name="title_activity_main3">MainActivity</string>
    <string name="title_activity_main1">MainActivity</string>
    <string name="title_activity_bottom">MainActivity</string>
    <string name="title_activity_login2">LoginActivity2</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main6">MainActivity</string>

    <string name="plan1">LOW CALORIE PLAN</string>
    <string name="plan2">WEIGHT MAINTAIN PLAN</string>
    <string name="plan3">HIGH PROTEIN PLAN</string>
    <string name="plan4">BULKING PLAN</string>
    <string name="diet">DIET PLAN</string>


    <string name="very_severely_underweight">You are very Severely Underweight</string>
    <string name="severely_underweight">You are severely Underweight </string>
    <string name="underweight">You are underWeight</string>
    <string name="normal">You have normal weight</string>
    <string name="recipe">Recipes For You</string>
    <string name="overweight">You are overWeight</string>
    <string name="obese_class_i">You fall under Obese Class I category</string>
    <string name="obese_class_ii">You fall under Obese Class II category</string>
    <string name="obese_class_iii">You fall under Obese Class III category</string>


    <string name="select">Select Diet Plan</string>

    <string name="breakfast1">Breakfast Recipes</string>
    <string name="lunch1">Lunch Recipes </string>
    <string name="dinner1">Dinner Recipes</string>
    <string name="snack1">Snack Recipes</string>

    <!--chatbot-->
    <string name="what_s_on_your_mind">Enter your query</string>
    <string name="menu_refresh">Refresh</string>


    <string name="search_text"> Search Food</string>

</resources>
