<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    app:cardCornerRadius="5dp"
    app:cardElevation="8dp"
    android:layout_margin="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_baseline_free_breakfast_24">

        </ImageView>

        <TextView
            android:layout_width="183dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="159dp"
            android:text="@string/breakfast"
            android:textSize="40sp">

        </TextView>

        <TextView
            android:layout_width="293dp"
            android:layout_height="54dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="108dp"
            android:text="@string/approx"
            android:textSize="25sp">

        </TextView>

        <TextView
            android:layout_width="142dp"
            android:layout_height="65dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="-52dp"
            android:layout_marginBottom="206dp"
            android:text="@string/add"
            android:textColor="@color/add"
            android:textSize="30sp">

        </TextView>


    </RelativeLayout>

</androidx.cardview.widget.CardView>
