<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPassword">

    <ImageView
        android:id="@+id/imglogo"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo"/>

    <TextView
        android:id="@+id/txtmsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/msg"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/mycolor"
        android:layout_below="@+id/imglogo"/>

    <EditText
        android:id="@+id/etFPmobileno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:hint="@string/mobileno"
        android:inputType="phone"
        android:layout_below="@id/txtmsg"
        android:maxLines="1"
        android:maxLength="10"
        android:layout_marginTop="30dp"
        android:textColorHint="@color/mycolor"
        android:drawableLeft="@drawable/ic_smartphone_black_24dp"
        android:drawablePadding="10dp"
        android:background="@drawable/edit"
        android:padding="20dp"/>


    <EditText
        android:id="@+id/etFPemail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:hint="@string/email_address"
        android:inputType="text"
        android:layout_below="@id/etFPmobileno"
        android:maxLines="1"
        android:layout_marginTop="20dp"
        android:textColorHint="@color/mycolor"
        android:drawableLeft="@drawable/ic_email_black_24dp"
        android:drawablePadding="10dp"
        android:background="@drawable/edit"
        android:padding="20dp"/>

    <Button
        android:id="@+id/btnFPnext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:hint="Next"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColorHint="#ffffff"
        android:layout_below="@id/etFPemail"
        android:background="@drawable/button"
        />
</RelativeLayout>