<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Register">


    <Button
        android:id="@+id/login"
        android:layout_width="336dp"
        android:layout_height="31dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="36dp"
        android:layout_marginTop="684dp"
        android:background="@drawable/edit"
        android:hint="@string/register"
        android:text="Already have an Account? Login here"
        android:textColor="#4CAF50"
        android:textColorHint="#ffffff"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="136dp"
        android:text="Register Yourself"
        android:textColor="@color/mycolor"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/name"
        android:layout_width="336dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="36dp"
        android:layout_marginTop="156dp"
        android:background="@drawable/edit"
        android:drawableLeft="@drawable/ic_person_black_24dp"
        android:drawablePadding="10dp"
        android:hint="@string/name_min_3_characters"
        android:inputType="text"
        android:maxLines="1"
        android:padding="20dp"
        android:textColorHint="@color/mycolor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/email"
        android:layout_width="336dp"
        android:layout_height="64dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="312dp"
        android:background="@drawable/edit"
        android:drawableLeft="@drawable/ic_email_black_24dp"
        android:drawablePadding="10dp"
        android:hint="@string/email_address"
        android:inputType="text"
        android:maxLines="1"
        android:padding="20dp"
        android:textColorHint="@color/mycolor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etRMobileno"
        android:layout_width="336dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="232dp"
        android:background="@drawable/edit"
        android:drawableLeft="@drawable/ic_smartphone_black_24dp"
        android:drawablePadding="10dp"
        android:hint="@string/mobileno"
        android:inputType="phone"
        android:maxLength="10"
        android:maxLines="1"
        android:padding="20dp"
        android:textColorHint="@color/mycolor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etRpassword"
        android:layout_width="336dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/etRMobileno"
        android:layout_marginStart="36dp"
        android:layout_marginTop="392dp"
        android:background="@drawable/edit"
        android:drawableLeft="@drawable/ic_lock_black_24dp"
        android:drawablePadding="10dp"
        android:hint="Password (min 8 characters)"
        android:inputType="textPassword"
        android:maxLines="1"
        android:padding="20dp"
        android:textColorHint="@color/mycolor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etRconfirmpassword"
        android:layout_width="336dp"
        android:layout_height="62dp"
        android:layout_below="@id/etRpassword"
        android:layout_marginStart="36dp"
        android:layout_marginTop="468dp"
        android:background="@drawable/edit"
        android:drawableLeft="@drawable/ic_lock_black_24dp"
        android:drawablePadding="10dp"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:padding="20dp"
        android:textColorHint="@color/mycolor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/register"
        android:layout_width="348dp"
        android:layout_height="52dp"
        android:layout_below="@+id/etRconfirmpassword"
        android:layout_marginStart="32dp"
        android:layout_marginTop="576dp"
        android:background="@drawable/button"
        android:hint="@string/register"
        android:textColorHint="#ffffff"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imglogo2"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="128dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>