<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login">

    <Button
        android:id="@+id/btnLogin2"
        android:layout_width="345dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnLogin"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="26dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/edit"
        android:text="Login with OTP"
        android:textColor="#4CAF50"
        android:textColorHint="#ffffff"
        android:textSize="12sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnLogin3"
        android:layout_width="267dp"
        android:layout_height="32dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="74dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="14dp"
        android:background="@drawable/edit"
        android:hint="@string/register"
        android:text="Dont have an Account? Register here."
        android:textColor="#4CAF50"
        android:textColorHint="#ffffff"
        android:textSize="12sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imglogo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo" />

    <EditText
        android:id="@+id/etMobileNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/mobileno"
        android:inputType="phone"
        android:layout_below="@id/imglogo"
        android:maxLength="10"
        android:maxLines="1"
        android:layout_marginTop="50dp"
        android:textColorHint="#46be46"
        android:drawableLeft="@drawable/ic_smartphone_black_24dp"
        android:drawablePadding="10dp"
        android:background="@drawable/edit"
        android:padding="20dp"

        />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/password"
        android:maxLines="1"
        android:inputType="textPassword"
        android:textColorHint="#46be46"
        android:drawableLeft="@drawable/ic_lock_black_24dp"
        android:drawablePadding="10dp"
        android:background="@drawable/edit"
        android:padding="20dp"
        android:layout_below="@id/etMobileNumber"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="LOGIN"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColorHint="#ffffff"
        android:layout_below="@id/etPassword"
        android:background="@drawable/button"
        />


</RelativeLayout>