<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Progress">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/mycolor"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:buttonGravity="center_vertical"
            app:navigationIcon="@drawable/backbutton" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="201dp"
            android:text="PROGRESS"
            android:textColor="@color/white"
            android:textSize="26sp" />


    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="195dp"
            android:padding="10dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Calories Consumed"
                android:layout_alignParentEnd="true"
                android:textSize="18sp"
                android:textStyle="bold">

            </TextView>


            <TextView
                android:id="@+id/cal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="70dp"

                android:layout_marginBottom="132dp"
                android:text="2289 kcl"
                android:textSize="18sp">

            </TextView>

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="12 June 2020"

                android:textSize="22sp"
                android:textStyle="bold">

            </TextView>

            <TextView
                android:layout_width="96dp"
                android:layout_height="52dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="265dp"
                android:layout_marginBottom="80dp"
                android:text="@string/pro"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="22sp"></TextView>

            <ProgressBar
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="78dp"
                android:indeterminateDrawable="@drawable/pb_drawable1"
                android:indeterminateDuration="50"
                android:progress="40"></ProgressBar>

            <TextView
                android:layout_width="85dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="103dp"
                android:text="@string/carbs"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="22sp">

            </TextView>

            <ProgressBar

                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"

                android:layout_alignParentBottom="true"
                android:layout_marginEnd="123dp"
                android:layout_marginBottom="78dp"
                android:indeterminateDrawable="@drawable/pb_drawable1"
                android:indeterminateDuration="50"
                android:progress="40">

            </ProgressBar>

            <TextView
                android:layout_width="92dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_gravity="center"
                android:layout_marginEnd="120dp"
                android:layout_marginBottom="103dp"
                android:text="@string/fat"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="22sp">

            </TextView>

            <ProgressBar

                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="78dp"
                android:indeterminateDrawable="@drawable/pb_drawable1"
                android:indeterminateDuration="50"
                android:progress="40">

            </ProgressBar>

            <TextView
                android:id="@+id/protein"
                android:layout_width="100dp"
                android:layout_height="20dp"
                android:layout_alignParentBottom="true"

                android:layout_marginLeft="10dp"

                android:layout_marginBottom="50dp"
                android:text="200g left"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/carbb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="29dp"
                android:layout_marginBottom="50dp"
                android:text="200g left"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/fat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="147dp"
                android:layout_marginBottom="61dp"
                android:text="200g left"
                android:textColor="@color/black" />


        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>